fix code snippet text wrapping

--- a/assets/application.css
+++ b/assets/application.css
@@ -28,7 +28,7 @@ li {
 }
 
 ul code, p code, pre {
-  padding: 0.5em 0.2em;
+  padding: 0.05em 0.2em;
   margin: 0;
   font-size: 85%;
   background-color: rgba(129,136,150,.2);
@@ -168,6 +168,7 @@ pre {
   padding: 10px;
   width: 100%;
   box-sizing: border-box;
+  overflow-x: scroll;
 }
 
 .progressbar-progress {
@@ -239,7 +240,7 @@ pre {
 }
 
 .present-container pre {
-  font-size: 26px;
+  font-size: 22px;
   margin-top: 30px;
 }
 
